fix(toast): Prevent actions text from wrapping to multiple lines

--- a/components/base/toast/toast.scss
+++ b/components/base/toast/toast.scss
@@ -38,6 +38,7 @@
       @include gl-ml-3;
       @include gl-text-transform-none;
       @include gl-font-base;
+      @include gl-white-space-nowrap;
     }
 
     .toast-close {
